fix z-index on coinss slider

--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -826,6 +826,7 @@ header {
             align-items: center;
             justify-content: center;
             margin: 42px auto 59px;
+            z-index: 2;
 
             .action__item {
                 display: flex;
